add fours  lending

--- a/dev/css/_banner.scss
+++ b/dev/css/_banner.scss
@@ -8,6 +8,11 @@
     background-size: 100% 100% !important;
 }
 
+.construction {
+  background: url("../../public/images/bg-construction.png") top left no-repeat !important;
+  background-size: 100% 100% !important;
+}
+
 .banner {
   position: relative;
   min-height: calc(100vh - 87px);
