--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -174,18 +174,6 @@
         max-width: 102px;
         max-height: 26px; } }
 
-.supporting {
-  background: url("../../public/images/bg-support.png") top left no-repeat !important;
-  background-size: 100% 100% !important; }
-
-.general {
-  background: url("../../public/images/bg-general.png") top left no-repeat !important;
-  background-size: 100% 100% !important; }
-
-.construction {
-  background: url("../../public/images/bg-construction.png") top left no-repeat !important;
-  background-size: 100% 100% !important; }
-
 .banner {
   position: relative;
   min-height: calc(100vh - 87px);
@@ -383,7 +371,7 @@
         margin: auto; } }
   @media (max-width: 460px) {
     .banner {
-      background: linear-gradient(137.14deg, rgba(255, 255, 255, 0.9) 11.02%, rgba(255, 255, 255, 0) 69.02%), url("../../public/images/banner-mob.png") top left no-repeat !important;
+      background: linear-gradient(137.14deg, rgba(255, 255, 255, 0.2) 19.02%, rgba(255, 255, 255, 0) 85.02%), url("../../public/images/banner-mob.png") top left no-repeat !important;
       background-size: 100% 100% !important; }
       .banner .caption {
         font-size: 28px;
@@ -399,6 +387,30 @@
   @media (max-width: 340px) {
     .banner form .inputs input {
       min-width: 198px; } }
+
+.supporting {
+  background: url("../../public/images/bg-support.png") top left no-repeat !important;
+  background-size: 100% 100% !important; }
+  @media (max-width: 460px) {
+    .supporting {
+      background: linear-gradient(137.14deg, rgba(255, 255, 255, 0.9) 19.02%, rgba(255, 255, 255, 0) 85.02%), url("../../public/images/bg-support.png") top left no-repeat !important;
+      background-size: 100% 100% !important; } }
+
+.general {
+  background: url("../../public/images/bg-general.png") top left no-repeat !important;
+  background-size: 100% 100% !important; }
+  @media (max-width: 460px) {
+    .general {
+      background: linear-gradient(137.14deg, rgba(255, 255, 255, 0.9) 19.02%, rgba(255, 255, 255, 0) 85.02%), url("../../public/images/bg-general.png") top left no-repeat !important;
+      background-size: 100% 100% !important; } }
+
+.construction {
+  background: url("../../public/images/bg-construction.png") top left no-repeat !important;
+  background-size: 100% 100% !important; }
+  @media (max-width: 460px) {
+    .construction {
+      background: linear-gradient(137.14deg, rgba(255, 255, 255, 0.9) 19.02%, rgba(255, 255, 255, 0) 85.02%), url("../../public/images/bg-construction.png") top left no-repeat !important;
+      background-size: 100% 100% !important; } }
 
 .why {
   background: #ffffff;
@@ -2277,7 +2289,7 @@
         line-height: 23px;
         text-align: center;
         color: #FFFFFF;
-        padding: 13px 43px; }
+        padding: 13px 65px; }
       .work form button:hover {
         transition: .2s;
         background: #fff; }
@@ -2390,31 +2402,6 @@
       max-height: 100%; }
     .work .inner {
       height: 100%; } }
-
-.gallery {
-  padding: 80px 0;
-  background: #fff; }
-  .gallery .col-lg-4 {
-    padding: 5px; }
-  .gallery .caption {
-    margin-top: 0;
-    margin-bottom: 40px;
-    font-weight: 700;
-    font-family: "Montserrat", sans-serif;
-    text-transform: uppercase;
-    font-size: 30px;
-    letter-spacing: -.02em;
-    color: #000;
-    text-align: center; }
-  @media (max-width: 768px) {
-    .gallery {
-      padding: 40px 0 40px 0; }
-      .gallery .caption {
-        font-size: 20px;
-        margin-bottom: 20px; } }
-  @media (max-width: 576px) {
-    .gallery .caption {
-      font-size: 18px; } }
 
 .footer {
   background: url("../../public/images/bg-footer.png") top left no-repeat;
